--- a/cap_04/index.html
+++ b/cap_04/index.html
@@ -26,6 +26,7 @@
   <body>
 
     <header class="cabecalho container">
+      <a href="#conteudoPrincipal" class="pularNavegacao">Pular para conteúdo principal</a> 
       <a href="#" class="cabecalho-logo" title="Home Apeperia">
         <svg width="205" height="59" viewBox="0 0 205 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <title>Logotipo da Apeperia</title>
@@ -64,7 +65,7 @@
       </nav>
     </header>
 
-    <main class="conteudo">
+    <main class="conteudo" role="main">
 
       <section class="secaoDestaque">
         <h1 class="secaoDestaque-titulo">
